@@ -1,6 +1,7 @@
 package bl;
 
 import bl.strategy.LongStayInspector;
+import bl.strategy.NightAbsenceInspector;
 import dao.MDProbe;
 import entity.*;
 import enums.CheckResult;
@@ -20,13 +21,17 @@ import java.util.*;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+
+//java -Xms800m -Xmx800m -XX:PermSize=256m -XX:MaxPermSize=512m -XX:MaxNewSize=512m -jar xxx.jar
+//TODO 待机显示需要多次测试, 释放内存
 public class Controller implements DASService {
     String whiteListPath;
     String blackListPath;
     String tutorMapListPath;
     String outputExcelPath;
     String holidayExcelPath;
-    LongStayInspector inspector;
+    LongStayInspector longInspector;
+    NightAbsenceInspector nightInspector = new NightAbsenceInspector();
 
     MDProbe probe;
     Map<Tutor, String> tutorMap;
@@ -38,9 +43,9 @@ public class Controller implements DASService {
         tutorMap = ExcelUtil.readTutorStudentMaps(tutorMapListPath, "Sheet1");
         List<Holiday> holidayList = ExcelUtil.readHoliday(holidayExcelPath, "Sheet1");
 
-        inspector.setWhiteList(whiteList);
-        inspector.setBlackList(blackList);
-        inspector.setHolidays(holidayList);
+        longInspector.setWhiteList(whiteList);
+        longInspector.setBlackList(blackList);
+        longInspector.setHolidays(holidayList);
     }
 
     public void setWhiteListPath(String whiteListPath) {
@@ -63,8 +68,8 @@ public class Controller implements DASService {
         this.holidayExcelPath = holidayExcelPath;
     }
 
-    public void setInspector(LongStayInspector inspector) {
-        this.inspector = inspector;
+    public void setLongInspector(LongStayInspector longInspector) {
+        this.longInspector = longInspector;
     }
 
     private void writeFile(List<SuspectStudent> students) throws FileNotWritable, FileNotClosable {
@@ -74,22 +79,26 @@ public class Controller implements DASService {
     }
 
 
-    private List<SuspectStudent> doCheck(TimeRequirement requirement) {
+    private List<SuspectStudent> doCheck(TimeRequirement longRequirement, TimePair nightRequirement) {
         System.out.println("-doing check");
         System.out.println("--getting records");
         Map<String, List<PassRecord>> recordMaps = probe.getRecordsGrouped();
-        inspector.setRecordMaps(recordMaps);
-        return inspector.apply(requirement);
+        longInspector.setRecordMaps(recordMaps);
+        nightInspector.setRecordMaps(recordMaps);
+
+        List<SuspectStudent> r1 = longInspector.apply(longRequirement);
+        List<SuspectStudent> r2 = nightInspector.apply(nightRequirement);
+        return mergeRes(r1, r2);
     }
 
 
     @Override
-    public CheckResult generateStudentList(TimeRequirement requirement) {
+    public CheckResult generateStudentList(TimeRequirement longStayRequirement, TimePair nightRequirement) {
 
         try {
             probe = MDProbe.getInstance();
             readFile();
-            List<SuspectStudent> students = doCheck(requirement);
+            List<SuspectStudent> students = doCheck(longStayRequirement, nightRequirement);
             translateStatus(students);
             writeFile(students);
 
@@ -193,26 +202,59 @@ public class Controller implements DASService {
         students.forEach(s -> {
             List<String> statusList = Arrays.stream(s.getStatus().split(":")).filter(o -> o.length() > 0).collect(Collectors.toList());
             StringBuilder builder = new StringBuilder();
+
+            if (statusList.contains(StudentStatus.NIGHT_ABSENCE.name())) {
+                builder.append("学生昨夜未归; ");
+            }
             if (statusList.contains(StudentStatus.STILL_OUT.name()))
                 builder.append("学生长时间在外，到现在仍未回; ");
 
             if (statusList.contains(StudentStatus.LONG_IN.name())) {
-                builder.append("存在长时间待在宿舍的情况,");
+                builder.append("存在长时间待在宿舍的情况");
             } else if (statusList.contains(StudentStatus.LONG_OUT.name())) {
-                builder.append("存在长时间在外的情况; ");
+                builder.append("存在长时间在外的情况");
             }
 
             if (statusList.contains(StudentStatus.ABOUT_HOLIDAY.name()))
-                builder.append("异常记录与设置的假期有关; ");
+                builder.append(", 异常记录与设置的假期有关");
 
             if (statusList.contains(StudentStatus.WITH_CONFUSION.name()))
-                builder.append("但存在混淆的记录; ");
+                builder.append(", 但存在混淆的记录");
 
             if (statusList.contains(StudentStatus.WATCHED.name()))
-                builder.append("该学生在关注名单上");
+                builder.append("; 该学生在关注名单上");
 
 
             s.setStatus(builder.toString());
         });
+    }
+
+    private List<SuspectStudent> mergeRes(List<SuspectStudent> longStayStudents, List<SuspectStudent> nightAbsentStudents) {
+        List<SuspectStudent> res = new ArrayList<>();
+        List<String> longStayIds = longStayStudents.stream()
+                .map(SuspectStudent::getStudentId)
+                .collect(Collectors.toList());
+        List<String> nightAbsentIds = nightAbsentStudents.stream()
+                .map(SuspectStudent::getStudentId)
+                .collect(Collectors.toList());
+        //夜不归宿且没有长时间停留的学生
+        res.addAll(nightAbsentStudents.stream()
+                .filter(o -> !longStayIds.contains(o.getStudentId()))
+                .collect(Collectors.toList()));
+
+        //两个集合的交集
+        longStayStudents.stream()
+                .filter(o -> nightAbsentIds.contains(o.getStudentId()))
+                .forEach(o -> {
+                    o.setLevel(o.getLevel() + 1);
+                    o.setStatus(o.getStatus() + ":" + StudentStatus.NIGHT_ABSENCE.name());
+                    o.getDoubtfulRecords().addAll(nightAbsentStudents.stream().filter(s -> s.getStudentId().equals(o.getStudentId())).findFirst().get().getDoubtfulRecords());
+                    res.add(o);
+                });
+
+        //长时间停留且未夜不归宿的学生
+        res.addAll(longStayStudents.stream().filter(o -> !nightAbsentIds.contains(o.getStudentId())).collect(Collectors.toList()));
+        return res;
+
     }
 }
